--- a/MOBILE/html/new/funding_detail1.html
+++ b/MOBILE/html/new/funding_detail1.html
@@ -181,7 +181,7 @@
                     <div class="funding_goal_text_wrap mgt30 borderline">
                         <div class="funding_goal_text funding_icon1">
                             <span>목표금액</span>
-                            <span class="only_english">2,256,700</span>
+                            <span class="only_english base">2,256,700</span>
                             원이 달성되면, 상품 준비와 배송이 진행 됩니다.
                         </div>
                     </div>
