--- a/PC/html/new/funding_detail2.html
+++ b/PC/html/new/funding_detail2.html
@@ -618,9 +618,9 @@
                             	</div>
                             	<div class="funding_goal_text_wrap mgt30">
                             		<div class="funding_goal_text funding_icon2">
-                            			<span>목표금액</span>
-                            			<span class="only_english">2,256,700</span>
-                            			<span>원이 달성되면, 상품 준비와 배송이 진행 됩니다.</span>	
+                            			<!-- <span>목표금액</span>
+                            			<span class="only_english">2,256,700</span> -->
+                            			<span>핫트딜이 성공적으로 종료되었습니다.</span>	
                             		</div>
                             	</div>
                             </div>
