--- a/PC/html/new/funding_main.html
+++ b/PC/html/new/funding_main.html
@@ -700,8 +700,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -751,8 +751,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -802,8 +802,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -853,8 +853,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -908,8 +908,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -959,8 +959,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -1010,8 +1010,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -1061,8 +1061,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -1116,8 +1116,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -1167,8 +1167,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -1218,8 +1218,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -1269,8 +1269,8 @@
 								                            <div class="price-wrap clear">
 								                                <strong class="price"><b class="">12,730</b>원</strong>
 								                            </div>
-								                            <div class="funding_processbar_wrap mgt65">
-								                            	<div class="funding_progressbar_wrap mgt80">
+								                            <div class="funding_processbar_wrap mgt30">
+								                            	<div class="funding_progressbar_wrap">
 								                            		<div class="funding_progressbar">
 								                            			<div class="funding_bar" style="width:40%;"></div>
 								                            		</div>
@@ -1408,7 +1408,7 @@
 					                            	</div>
 					                        	</div>
 					                        </a>
-				                            <div class="mgt40">
+				                            <div class="">
 						                        <a href="#" class="encore_btn request">앵콜요청</a>
 					                        </div>
 					                    </li>
@@ -1424,7 +1424,7 @@
 					                            	</div>
 					                        	</div>
 					                        </a>
-				                            <div class="mgt40">
+				                            <div class="">
 					                           	<a href="#" class="encore_btn complete">요청완료</a>
 					                        </div>
 					                    </li>
@@ -1440,7 +1440,7 @@
 					                            	</div>
 					                        	</div>
 					                        </a>
-				                            <div class="mgt40">
+				                            <div class="">
 					                           	<a href="#" class="encore_btn complete">요청완료</a>
 					                        </div>
 					                    </li>
@@ -1456,7 +1456,7 @@
 					                            	</div>
 					                        	</div>
 					                        </a>
-				                            <div class="mgt40">
+				                            <div class="">
 						                        <a href="#" class="encore_btn request">앵콜요청</a>
 					                        </div>
 					                    </li>
