--- a/PC/html/new/funding_orderSheet_member.html
+++ b/PC/html/new/funding_orderSheet_member.html
@@ -324,8 +324,14 @@
                             </table>
                         </div>
 
-                        <div class="user_title mgt70">
-                            <h3>배송지 정보</h3>
+                        <div class="user_title mgt70 have_inner_txt">
+                            <h3 class="i_txt">배송지 정보</h3>
+                            <div class="choice_wrap">
+                                <span class="choice_wrap_inner">
+                                    <input type="radio" name="orderInfo1" id="orderInfo_11" value="Y" />
+                                    <label for="orderInfo_11">주문자 정보와 동일</label>
+                                </span>                                
+                            </div>
                         </div>
                         <div class="user_table_wrap">
                             <table class="table_wrap">
@@ -427,14 +433,14 @@
                                             </div>
                                         </td>
                                     </tr>
-                                    <!-- <tr>
+                                    <tr>
                                        <th>비밀번호 <span class="star">*</span></th>
                                        <td>
                                            <div class="input_wrap">
                                                <input type="password" placeholder="비회원 주문 시 비밀번호 숫자 4자리를 입력해 주세요" class="width_check">
                                            </div>
                                        </td>
-                                   </tr> -->
+                                   </tr>
                                 </tbody>
                             </table>
                             <p class="alert_txt mgt10"><span class="point02">*</span><span>표시는 필수 입력 항목입니다. 필수 항목 모두 입력 완료 시 주문/결제 가능합니다.</span></p>
@@ -943,7 +949,7 @@
 
                         <h3 class="user_title distance">제휴 포인트</h3>
                         <div class="user_table_wrap">
-                            <ul class="agency_select">
+                          <ul class="agency_select">
                               <li>
                                 <input type="radio" name="guar" id="guar1" value="" title="">
                                 <label for="guar1" class="ui_align_mid">
@@ -1058,7 +1064,7 @@
 
                                                     <p>기타 문의나 더 자세한 내용이 알고 싶으시면 고객센터 &gt; 주문 FAQ 를 이용해 주시기 바랍니다.</p>
 
-                                                </div>
+                                                </div><!-- 
                                                 <div class="choice_wrap type_squre mgt10">
                                                     <span class="choice_wrap_inner">
                                                         <input type="checkbox" name="orderCheck1" id="orderCheck1"  />
@@ -1067,7 +1073,7 @@
                                                             <span class="color">(전자상거래법 제8조 2항)</span>
                                                         </label>
                                                     </span>
-                                                </div>
+                                                </div> -->
                                                 <div class="funding_policy_wrap mgt60">
                                                     <dl class="funding_policy">
                                                         <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -1094,7 +1100,7 @@
                                             <!--// 신용카드 -->
 
                                             <!-- 실시간 계좌이체 -->
-                                            <div class="tab_layer">
+                                            <div class="tab_layer"><!-- 
                                                 <div class="choice_wrap type_squre">
                                                     <span class="choice_wrap_inner">
                                                         <input type="checkbox" name="orderCheck2" id="orderCheck2"  />
@@ -1103,7 +1109,7 @@
                                                             <span class="color">(전자상거래법 제8조 2항)</span>
                                                         </label>
                                                     </span>
-                                                </div>
+                                                </div> -->
                                                 <div class="funding_policy_wrap mgt60">
                                                     <dl class="funding_policy">
                                                         <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -1142,7 +1148,7 @@
                                                         <li>휴대폰 결제로 별도의 수수료 부과는 없습니다.</li>
                                                     </ul>
                                                 </div>
-                                                <div class="choice_wrap type_squre mgt10">
+                                                <!-- <div class="choice_wrap type_squre mgt10">
                                                     <span class="choice_wrap_inner">
                                                         <input type="checkbox" name="orderCheck3" id="orderCheck3"  />
                                                         <label for="orderCheck3" class="last_check">
@@ -1150,7 +1156,7 @@
                                                             <span class="color">(전자상거래법 제8조 2항)</span>
                                                         </label>
                                                     </span>
-                                                </div>                                            
+                                                </div> -->                                            
                                                 <div class="funding_policy_wrap mgt60">
                                                     <dl class="funding_policy">
                                                         <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -1241,7 +1247,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </div><!-- 
                                                 <div class="choice_wrap type_squre mgt10">
                                                     <span class="choice_wrap_inner">
                                                         <input type="checkbox" name="orderCheck4" id="orderCheck4"  />
@@ -1250,7 +1256,7 @@
                                                             <span class="color">(전자상거래법 제8조 2항)</span>
                                                         </label>
                                                     </span>
-                                                </div>                                            
+                                                </div>        -->                                     
                                                 <div class="funding_policy_wrap mgt60">
                                                     <dl class="funding_policy">
                                                         <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -1349,7 +1355,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </div><!-- 
                                                 <div class="choice_wrap type_squre mgt10">
                                                     <span class="choice_wrap_inner">
                                                         <input type="checkbox" name="orderCheck5" id="orderCheck5"  />
@@ -1358,7 +1364,7 @@
                                                             <span class="color">(전자상거래법 제8조 2항)</span>
                                                         </label>
                                                     </span>
-                                                </div>                                            
+                                                </div>           -->                                  
                                                 <div class="funding_policy_wrap mgt60">
                                                     <dl class="funding_policy">
                                                         <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -1395,7 +1401,7 @@
                                                         <li>카카오톡 앱 미설치 시 앱스토어에서 앱 설치후 회원가입을 하셔야 합니다.</li>
                                                         <li>카카오톡 앱 내에서 카카오페이 가입 시 카드사 등록/인증을 하셔야 결제가 가능합니다.</li>
                                                     </ul>
-                                                </div>
+                                                </div><!-- 
                                                 <div class="choice_wrap type_squre mgt10">
                                                     <span class="choice_wrap_inner">
                                                         <input type="checkbox" name="orderCheck6" id="orderCheck6"  />
@@ -1404,7 +1410,7 @@
                                                             <span class="color">(전자상거래법 제8조 2항)</span>
                                                         </label>
                                                     </span>
-                                                </div>
+                                                </div> -->
                                                 <div class="funding_policy_wrap mgt60">
                                                     <dl class="funding_policy">
                                                         <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -1450,7 +1456,7 @@
                                                         <li>결제 건을 전체 취소할 경우 차후 재 결제 시 적용</li>
                                                         <li>적립된 스마일캐시는 유효기간(적립일로부터 90일) 내 미사용 및 구매 취소, 반품 시 자동 회수</li>
                                                     </ul>
-                                                </div>
+                                                </div><!-- 
                                                 <div class="choice_wrap type_squre mgt10">
                                                     <span class="choice_wrap_inner">
                                                         <input type="checkbox" name="orderCheck7" id="orderCheck7"  />
@@ -1459,7 +1465,7 @@
                                                             <span class="color">(전자상거래법 제8조 2항)</span>
                                                         </label>
                                                     </span>
-                                                </div>
+                                                </div> -->
                                                 <div class="funding_policy_wrap mgt60">
                                                     <dl class="funding_policy">
                                                         <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
@@ -1504,7 +1510,7 @@
                                                         <li>*타 프로모션과 중복 적용 불가</li>
                                                         <li>*기타 상세내용은 페이코 이벤트 공지사항을 참고 바랍니다.</li>
                                                     </ul>
-                                                </div>
+                                                </div><!-- 
                                                 <div class="choice_wrap type_squre mgt10">
                                                     <span class="choice_wrap_inner">
                                                         <input type="checkbox" name="orderCheck8" id="orderCheck8" />
@@ -1513,7 +1519,7 @@
                                                             <span class="color">(전자상거래법 제8조 2항)</span>
                                                         </label>
                                                     </span>
-                                                </div>
+                                                </div> -->
                                                 <div class="funding_policy_wrap mgt60">
                                                     <dl class="funding_policy">
                                                         <dt class="funding_title">펀딩서비스 상품(핫트딜) 구매에 관한 이용약관 동의</dt>
